k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-analyzer-deployment
  labels:
    app: invoice-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-analyzer
  template:
    metadata:
      labels:
        app: invoice-analyzer
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: invoice-analyzer-container
          # CI will set the image tag after apply:
          image: registry.delinternet.com/k8s/invoice-analyzer/invoice-analyzer-v2:latest-dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: snmp-trap
              containerPort: 2162
              protocol: UDP
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          # If you later decide to pass Settings via env at runtime, add:
          # env:
          #   - name: API_PORT
          #     value: "8080"
          #   - name: SNMP_TRAP_PORT
          #     value: "2162"
